# WorkSamples

Battleship_Clone/: Battleship_Game.py  Battleship_Game_Extra.py  Battleship_Pseudo_Code.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt
CPP_Converter/: CMakeLists.txt  IOFunctions.cpp  IOFunctions.h  main.cpp
Halifax_Bus_Map/: index.html  main.js
Laravel_Blog_Website/: .env  composer.json
Laravel_Blog_Website/app/: Post.php  Profile.php  Theme.php  User.php
Laravel_Blog_Website/app/Mail/: UserCreated.php  UserPasswordChanged.php
Laravel_Blog_Website/app/Policies/: ThemePolicy.php  UserPolicy.php
Laravel_Blog_Website/app/Providers/: AuthServiceProvider.php
Laravel_Blog_Website/config/: app.php
Laravel_Blog_Website/database/migrations/: 2014_10_12_000000_create_users_table.php  2019_11_15_173945_create_role_user_table.php  (+3 more)
Laravel_Blog_Website/routes/: web.php
Maze_Solver/: CMakeLists.txt  Maze.cpp  Maze.h  Node.cpp  Node.h  Stack.cpp  Stack.h  main.cpp
Maze_Solver/Mazes/: mazeTest.txt
Message_Encoder/: CMakeLists.txt  clearBuffer.c  clearBuffer.h  main.c
Mobile_Movie_Trailer_App/app/: build.gradle
Mobile_Quiz_App/: settings.gradle
Mobile_Quiz_App/app/: build.gradle
Socket_Chat_Program/GUI_Client/: Assignment 3.sln
Socket_Chat_Program/Terminal_Client/: Assignment 2.sln
Tic_Tac_Toe/: Block.cpp  Block.h  CMakeLists.txt  CheckMove.cpp  CheckMove.h  CheckPossibleWin.cpp  CheckPossibleWin.h  CheckWin.cpp  CheckWin.h  CompMove.cpp  CompMove.h  PrintGrid.cpp  PrintGrid.h  UserMove.cpp  UserMove.h  main.cpp
(+156 files in other folders)
